@@ -1,5 +1,10 @@
 2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/usbtest.c (usb_print_str): Silence spurious
+	warning.
+
+2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/lib/adler32.c: Recode due to license unclearness.
 
 2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>
